# go1_magnetometer_rm3100

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
launch/: dronecan_driver.launch.py  rm3100_driver.launch.py
src/: dronecan_driver.py  rm3100_driver.py
