<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm3100_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 driver for RM3100 device.</description>
  <maintainer email="duarte.cruz@isr.uc.pt">Duarte Cruz</maintainer>
  <license>ISR</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
